Archive2/76/c2a6e34abd0bce/output
main.cpp:18:23: error: 'X' is a private member of 'X'
        return sizeof(X);
                      ^
main.cpp:4:13: note: constrained by private inheritance here
struct TT : private T
            ^~~~~~~~~
main.cpp:9:8: note: member is declared here
struct X
       ^
1 error generated.
