Archive2/76/c2a6e34abd0bce/main.cpp


template<typename T>
struct TT : private T
{
};


struct X
{
};


struct XX : TT<X>
{
    int size() const
    {
        return sizeof(X);
    }
};



